k8s/trustwebprd.yml
---
#ClusterIP Service to expose Trust app
apiVersion: v1
kind: Service
metadata:
  name: trustwebprd
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: trustwebprd
---
#Trust App deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trustwebprd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trustwebprd
  template:
    metadata:
      labels:
        app: trustwebprd
    spec:
      containers:
      - name: trustwebprd
        image: harbor.prod.kubix.tm.com.my/trustprd/trustweb:<VERSION>
        ports:
        - containerPort: 80
