k8s/trustweb-ing.yml
#apiVersion: networking.k8s.io/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trustweb
spec:
  tls:
  - hosts: 
    - trust.dev.kubix.tm
  rules:
  - host: trust.dev.kubix.tm
    http:
      paths:
      - backend:
          serviceName: trustweb
          servicePort: 80
